--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@remixicon/react": "^4.6.0",
+    "@solana/web3.js": "^1.98.0",
     "@tailwindcss/vite": "^4.0.3",
     "bip39": "^3.1.0",
+    "ed25519-hd-key": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.0.3",
+    "tweetnacl": "^1.0.3",
     "vite-plugin-node-polyfills": "^0.23.0"
   },
   "devDependencies": {
